Improved formatting for Model and Dataset descriptions in the Settings panel. - Wrapping of long names - Markdown formatting support for descriptions - Fix overflowing text in compatibility list - Fix display issue with description preview line
PiperOrigin-RevId: 481725683

--- a/lit_nlp/client/core/app_toolbar.css
+++ b/lit_nlp/client/core/app_toolbar.css
@@ -116,6 +116,14 @@ button {
   color: rgba(60, 64, 67, 0.38);
 }
 
+/* Limit width of button text, without hiding icons. */
+.headline-button-text {
+  max-width: 180px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .subtitle {
   margin-top: 4px;
   margin-left: 12px;
