--- a/lit_nlp/client/core/global_settings.css
+++ b/lit_nlp/client/core/global_settings.css
@@ -78,10 +78,6 @@ a.link-out {
   padding: 0 5pt;
 }
 
-mwc-icon {
-  padding-right: 5pt;
-}
-
 a:hover {
   opacity: 0.5;
 }
@@ -162,7 +158,7 @@ a:hover {
 .config-list {
   border: 1px solid #dadce0;
   margin: 12pt;
-  overflow: auto;
+  overflow-y: scroll;
   height: 100%;
 }
 
@@ -172,6 +168,7 @@ a:hover {
   border-bottom: 1px solid #dadce0;
   display: flex;
   justify-content: space-between;
+  gap: 4px;
   align-items: center;
   min-width: 0;
 }
@@ -194,7 +191,6 @@ a:hover {
 
 .expander {
   cursor: pointer;
-  padding-right: 5pt;
 }
 
 .left-offset {
@@ -236,10 +232,14 @@ a:hover {
 }
 
 .expanded-info.open {
+  gap: 4px;
   padding: 6px 6px 6px 0;
   max-height: 25vh;
-  overflow: auto;
   border-bottom: 1px solid #dadce0;
+}
+
+.expanded-info > * {
+  overflow-y: auto;
 }
 
 .expanded-info mwc-icon {
@@ -261,8 +261,8 @@ a:hover {
 }
 
 .info-line {
-  align-items: center;
-  display: flex;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .indent-line {
@@ -286,8 +286,19 @@ a:hover {
   color: #888;
 }
 
+/**
+ * Undo marked's handling of line breaks and restore normal whitespace handling.
+ * This gives much better formatting of descriptions that were designed to be
+ * readable in plaintext / code comments:
+ * - Single newlines don't get <p> tags, but are preserved by pre-wrap.
+ * - Double newlines get <p> tags from marked(), so we strip the extra margins
+ *   and let pre-wrap handle the line break instead.
+ */
 .description-text {
-  white-space: pre-wrap; /* preserve newlines */
+  white-space: pre-wrap;
+}
+.description-text > p {
+  margin-block: 0;
 }
 
 .status {
@@ -301,6 +312,7 @@ a:hover {
   color: #129eaf;
 }
 .status mwc-icon {
+  padding-right: 5px;
 }
 
 .prev-next-buttons {
@@ -333,9 +345,20 @@ button.prev {
   flex-direction: column;
 }
 
-.col-end {
+.fixed-third-col {
+  width: 33%;
+  min-width: 33%;
+}
+
+.flex-col {
+  flex: 1;
+}
+
+.status-col {
+  margin-left: 8px;
+  margin-right: 8px;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-end;
+  align-items: center;
 }
